--- a/_app/pug/main/5-fifth.pug
+++ b/_app/pug/main/5-fifth.pug
@@ -1,2 +1,13 @@
 section#fifth
 	.container
+		.row
+			.col-md-6
+				h3.general-title
+					span Основа
+					|  системно-родовой терапии - 
+					span идеи Берта Хеллингера
+				p.general-text Идеи Берта Хеллингера оказали огромное влияние на современную психотерапию и получили признание в профессиональных кругах.
+				+b('', 'button-up', href, 'Записаться на мастер-клас')
+			.col-md-6
+				.general-img
+					+imgs('mob-none', 'img/images/fifth.png', 'img/images/fifth-mob.png 560w, img/images/fifth.png 730w','Картинка блока')
