--- a/_app/pug/main/6-author.pug
+++ b/_app/pug/main/6-author.pug
@@ -1,2 +1,15 @@
 section#author
 	.container
+		.row
+			.col-md-6.col-md-offset-6
+				h3.author-title
+					small Автор курса
+					| Жанна Абрамова
+				ul.general-list
+					li Клинический психолог, гештальт-терапевт, гипнотерапевт;
+					li Мастер практической психологии и технологий осознанности;
+					li Коуч, тренер обучающих и трансформационных программ;
+					li Мастер НЛП терапии и ДСТ (терапия диссоциированных состояний);
+					li Процессор техник РПТ, тетахилинга, терапевт новой германской медицины;
+					li Мастер метафорических карт (МАК), системно-родовой терапии, технологии мгновенного исцеления, регрессивного гипноза;
+					li Автор курсов по новой системной психологии, МАК, системной терапии, коучинга, НЛП терапии
