--- a/_app/pug/main/1-main.pug
+++ b/_app/pug/main/1-main.pug
@@ -2,12 +2,12 @@ section#main
 	.container
 		.row
 			.col-md-6
-				p.main-pre
-				h1.main-title
-				p.main-text
-				p.main-author-author
-				p.main-text
-				p.main-date
+				p.main-pre Открытый онлайн мастер-класс
+				h1.main-title Системно-родовая терапия
+				p.main-text Освой самый эффективный инструмент современной психологии.
+				p.main-author Автор: Жанна Абрамова
+				p.main-text Идейный наследник теорий Берта Хеллингера. Последовательно развивала через практический опыт направление системных расстановок.
+				p.main-date Даты проведения 11.11.11
 				form(action!=action+group method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8" target=form_target).form.form-maan
 					.email-block.email-block-form
 						input( type="hidden" value="1" name="required_fields[email]")
@@ -31,8 +31,7 @@ section#main
 						input(type="hidden" name="_aid" value="")
 						input(type="hidden" name="_vcaid" value="")
 			.col-md-6
-				.main-img
+				.general-img
 					.rhomb.rhomb-main-1
 					.rhomb.rhomb-main-2
-					+imgs('mob-none', 'img/images/main.png', 'Изображение блока')
-					+imgs('d-none', 'img/images/main-mob.png', 'Изображение блока')
+					+imgs('', 'img/images/main.png', 'img/images/main-mob.png 560w, img/images/main.png 734w','Изображение блока')
