--- a/_app/pug/main/3-third.pug
+++ b/_app/pug/main/3-third.pug
@@ -1,2 +1,7 @@
 section#third
 	.container
+		.row
+			.col-md-6
+				h3.general-title Профессия психотерапевта
+				p.general-title Обучаясь в “Институте Современной Психологии” по направлению “Системно-родовая терапия”, с выдачей диплома дающим право заниматься профессиональной деятельностью в сфере психотерапии, вы получите самые передовые знания.
+				+b('', 'button-up', href, 'Записаться на мастер-клас')
