--- a/_app/pug/main/7-revs.pug
+++ b/_app/pug/main/7-revs.pug
@@ -1,2 +1,6 @@
 section#revs
 	.container
+		h3.general-title Что говорят про “Системно-родовую терапию” наши студенты
+		.revs-slider-text
+			each n in [1,2,3,4,5,6,7,8]
+				a.text-rev-link(href=path+"img/revs/text-"+n+".jpg" data-fancybox="text-revs"): img(src=path+"img/revs/text-"+n+".min.jpg", alt="Отзыв "+n).text-rev-img
