--- a/_app/styl/styles.min.styl
+++ b/_app/styl/styles.min.styl
@@ -1,7 +1,9 @@
 @import 'base/1-fonts'
 
 @import '../_css/bootstrap.min.css'
-// @import '../_css/popup.css'
+@import '../_css/popup.css'
+@import '../_css/slick.css'
+@import '../_css/slick-theme.css'
 
 // @import 'base/2-base'
 
@@ -16,3 +18,6 @@
 // @import 'main/7-author'
 // @import 'base/4-footer'
 // @import 'main/8-modal'
+.general-img
+	img
+		width 100%
