Main page is stylezed

--- a/_app/index.pug
+++ b/_app/index.pug
@@ -26,8 +26,8 @@ mixin gt(cl, h3)
 	h3.general-title(class=cl)!=h3
 mixin img(cl, src, alt)
 	img(class=cl src=path+src alt=alt)
-mixin imgs(cl, src, srcset, alt)
-	img(class=cl src=path+src srcset=path+srcset alt=alt)
+mixin imgs(cl, src, alt)
+	img(class=cl src=path+src alt=alt)
 
 doctype html
 html(lang="ru")
