--- a/_app/pug/base/1-header-main.pug
+++ b/_app/pug/base/1-header-main.pug
@@ -5,11 +5,11 @@ header
 		.header-nav
 			ul.header-menu
 				li
-					a(href="#") Психологам
+					a(href="#second") Психологам
 				li
-					a(href="#") Новая профессия
+					a(href="#third") Новая профессия
 				li
-					a(href="#") Личная трансформация
+					a(href="#fourth") Личная трансформация
 				li
 					a(href="#revs") Отзывы
 	.mobile-menu
