--- a/_app/pug/main/4-fourth.pug
+++ b/_app/pug/main/4-fourth.pug
@@ -3,12 +3,13 @@ section#fourth
 		.row
 			.col-md-6.col-md-push-6
 				h3.general-title Системно-родовая терапия.
-				p.general-text Это мощная личная проработка, решение практически любой проблемы в области психического здоровья. 
+				p.general-text Это мощная личная проработка, решение практически любой проблемы в области психического здоровья.
 					br
 					| Ответы на все вопросы в области предназначения, финансов, здоровья и отношений.
-				+b('mob-none', 'button-up', href, 'Записаться на мастер-клас')
-			.col-md-6.col-md-pull-6
-				.general-img
-					+imgs('mob-none', 'img/images/fourth.png', 'img/images/fourth-mob.png 560w, img/images/fourth.png 646w','Картинка блока')
-					//- +imgs('d-none', 'img/images/fourth-mob.png', 'Картинка блока')
+				+b('mob-none', 'button-up', href, 'Записаться на мастер-класс')
+			.col-md-5.col-md-pull-6
+				.general-img.general-img-right.general-img-fourth
+					.rhomb.rhomb-fourth
+					+imgs('mob-none', 'img/images/fourth.png','Картинка блока')
+					+imgs('d-none', 'img/images/fourth-mob.png', 'Картинка блока')
 				//- +b('d-none', 'button-up', href, 'Записаться на мастер-клас')
