--- a/_app/pug/main/5-fifth.pug
+++ b/_app/pug/main/5-fifth.pug
@@ -9,5 +9,6 @@ section#fifth
 				p.general-text Идеи Берта Хеллингера оказали огромное влияние на современную психотерапию и получили признание в профессиональных кругах.
 				+b('', 'button-up', href, 'Записаться на мастер-клас')
 			.col-md-6
-				.general-img
-					+imgs('mob-none', 'img/images/fifth.png', 'img/images/fifth-mob.png 560w, img/images/fifth.png 730w','Картинка блока')
+				.general-img.general-img-fifth
+					+imgs('mob-none', 'img/images/fifth.png','Картинка блока')
+					+imgs('d-none', 'img/images/fifth-mob.png','Картинка блока')
