--- a/_app/styl/styles.min.styl
+++ b/_app/styl/styles.min.styl
@@ -5,19 +5,16 @@
 @import '../_css/slick.css'
 @import '../_css/slick-theme.css'
 
-// @import 'base/2-base'
+@import 'base/2-base'
 
-// @import 'base/3-header'
+@import 'base/3-header'
 
-// @import 'main/1-main'
-// @import 'main/2-reqs'
-// @import 'main/3-unic'
-// @import 'main/4-helps'
-// @import 'main/5-stat'
-// @import 'main/6-why'
-// @import 'main/7-author'
-// @import 'base/4-footer'
-// @import 'main/8-modal'
-.general-img
-	img
-		width 100%
+@import 'main/1-main'
+@import 'main/2-second'
+@import 'main/3-third'
+@import 'main/4-fourth'
+@import 'main/5-fifth'
+@import 'main/6-author'
+@import 'main/7-revs'
+@import 'base/4-footer'
+@import 'main/8-modal'
