--- a/_app/pug/main/3-third.pug
+++ b/_app/pug/main/3-third.pug
@@ -3,5 +3,9 @@ section#third
 		.row
 			.col-md-6
 				h3.general-title Профессия психотерапевта
-				p.general-title Обучаясь в “Институте Современной Психологии” по направлению “Системно-родовая терапия”, с выдачей диплома дающим право заниматься профессиональной деятельностью в сфере психотерапии, вы получите самые передовые знания.
-				+b('', 'button-up', href, 'Записаться на мастер-клас')
+				p.general-text Обучаясь в “Институте Современной Психологии” по направлению “Системно-родовая терапия”, с выдачей диплома дающим право заниматься профессиональной деятельностью в сфере психотерапии, вы получите самые передовые знания.
+				+b('', 'button-up', href, 'Записаться на мастер-класс')
+			.col-md-6
+				.general-img
+					.rhomb.rhomb-white.rhomb-third-1
+					.rhomb.rhomb-white.rhomb-third-2
