--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -3,11 +3,28 @@
 	padding 0
 	outline none
 body
-	font-size: 
-	font-family: 
-	color 
-	background-color 
-	line-height: 
+	font-size: 18px
+	font-family: G
+	color #000
+	background-color #fff
+	line-height: 1.56
+.wrapper
+	overflow hidden
+.content
+	position relative
+	z-index 30
+.container
+	width 1600px
+	@media screen and (max-width 1600px)
+			width 1280px
+	@media screen and (max-width 1300px)
+			width 1170px
+	@media screen and (max-width 1199px)
+			width 970px
+	@media screen and (max-width 991px)
+			width 750px
+	@media screen and (max-width 767px)
+			width 100%
 a
 	color: #000
 	&:focus
@@ -61,17 +78,81 @@ footer
 		cursor pointer
 		margin 0 auto
 .button
-	display block
+	display inline-block
 	text-align center
 	margin 0 auto
 	text-decoration none
-	color: rgb(255, 255, 255);
-	width: 100%
+	color: #000
+	width: auto
+	padding: 20px 123px;
+	background: #FFFFFF;
+	border: 3px solid #000000;
+	border-radius: 45px;
+	font-size: 20px
+	transition: all .3s ease
+	background-color transparent
 	&:focus
 		text-decoration none
-		color 
+		color #000
 	&:hover
 		text-decoration none
-		color 
+		color #fff
+		background-color: #000
+		font-weight: bold
 .general-title
-	text-align center
+	font-family: F
+	// font-size: 48px;
+	font-size: 36px;
+	font-weight: 900;
+	line-height: 36px
+	margin-bottom: 36px
+	span
+		color #68A599
+.general-text
+	// font-size: 26px;
+	font-size: 20px;
+	margin-bottom: 80px
+.d-none
+	display none
+	@media screen and (max-width 991px)
+		display inline-block
+@media screen and (max-width 991px)
+	.mob-none
+		display none
+.general-img
+	position relative
+	padding-top: 100%
+	img
+		width auto
+		position absolute
+		top 0
+		left 0
+	&-right
+		img
+			left  auto
+			right 0
+.rhomb
+	position absolute
+	width 16px
+	height: 16px
+	transform: rotate(45deg)
+	background-color: #CFEAE5
+	&&-white
+		background-color #fff
+.general-list
+	li
+		list-style none
+		margin-bottom: 20px
+		font-size: 20px
+		position relative
+		padding-left: 26px
+		&:before
+			content: ''
+			display block
+			position absolute
+			top 9px
+			left 0
+			transform: rotate(45deg)
+			width 12px
+			height: 12px
+			background-color: #68A599
