--- a/_app/styl/base/4-footer.styl
+++ b/_app/styl/base/4-footer.styl
@@ -1,47 +1,43 @@
 footer
-	padding 20px 0
-	text-align: center
-	background-color: rgba(#eee,.7)
-	font-size: 14px
-	h5
-		font-size: 20px;
-		margin 0
-		font-family: 
-		font-weight: bold
-	p
-		line-height: 1.3
-.conditions
-	color #000
-	text-decoration: underline
-	&:focus
-		color #000
-		text-decoration: underline
-	&:hover
-		color: #000
-		text-decoration: none
-.soc-buttons
-	width 100%
-	margin: 0 auto
+	padding 45px 0
+	font-size: 18px
+	@media screen and (max-width 991px)
+		padding 30px 0
+		font-size: 20px
+	@media screen and (max-width 767px)
+		text-align center
+	@media screen and (max-width 560px)
+		padding 20px 0
+		font-size: 16px
+	.&-logo
+		margin-bottom: 40px
+		@media screen and (max-width 767px)
+			margin-bottom: 30px
+			width 200px
+		@media screen and (max-width 560px)
+			margin-bottom: 20px
+	.&-text
+		margin-bottom: 15px
+		@media screen and (max-width 560px)
+			margin-bottom: 5px
+		&-right
+			text-align right
+			@media screen and (max-width 991px)
+				text-align: left
+			@media screen and (max-width 767px)
+				text-align center
+	.&-hr
+		border-top: 3px solid #000
+		margin 20px 0 40px
+		@media screen and (max-width 560px)
+			margin 20px 0
+	.&-docs
+		display inline-block
+		margin-right: 10px
 	a
-		display: inline-block
-		margin: 15px 7px 10px
-		width: 29px;
-		height: 29px;
-		background-image url(../img/icons/soc-buttons.png)
-		background-repeat no-repeat
-		transition all .3s ease
+		&:focus
+			color #000
+			text-decoration none
 		&:hover
-			opacity .9
-			transform: translateY(-3px)
-		&:nth-of-type(1)
-			background-position: 0 0
-		&:nth-of-type(2)
-			background-position: -29px 0
-		&:nth-of-type(3)
-			background-position: -58px 0
-		&:nth-of-type(4)
-			background-position: -87px 0
-		&:nth-of-type(5)
-			background-position: -116px 0
-		&:nth-of-type(6)
-			background-position: -145px 0
+			color #000
+			text-decoration underline
