--- a/_app/pug/base/2-footer.pug
+++ b/_app/pug/base/2-footer.pug
@@ -2,7 +2,7 @@ footer
 	.container
 		hr.footer-hr
 		a(href='https:/iomp.ru/' target='_blank')
-			+img('footer-logo', 'img/images/footer-logo.png', 'Логотип')
+			+imgs('footer-logo', 'img/images/footer-logo.png', 'Логотип')
 		.row
 			.col-md-6
 					p.footer-text 125315, г. Москва, пр-кт Ленинградский, д. 68, стр. 24, эт/пом/ком 2/IV/20
